--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "interactive-screenshot": "0.0.5",
-    "snekfetch": "^4.0.4"
+    "snekfetch": "^4.0.4",
+    "promise-ftp": "^1.3.5"
   }
 }
